<resources>
    <string name="app_name">InRainbows</string>

    <string name="new_semester">New Semester</string>
    <string name="semester_name">Semester name</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>

    <string name="subject_name">Subject name</string>
    <string name="subject_credits">Credits</string>
    <string name="subject_class_hours">Weekly class hours</string>

    <string name="sample_semester_name">First semester</string>
    <string name="sample_start_date">2018-01-20</string>
    <string name="sample_end_date">2018-05-30</string>

    <string name="sample_subject_name">Data structures</string>
    <string name="sample_subject_credits">3</string>
    <string name="sample_subject_grade">3.75</string>
    <string name="sample_subject_class_hours">4.5</string>

    <string name="sample_hours_day">0.5 h/0.75 h</string>
    <string name="sample_hours_week">3.5 h/4.5 h</string>
    <string name="sample_hours_semester">38.5 h/72 h</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="all_semester">All semester</string>

    <string name="grade_name_hint">Name</string>
    <string name="grade_hint">Grade</string>
    <string name="grade_percentage_hint">Percentage</string>
    <string name="grade_graded">I\'ve been given this grade</string>

    <string name="sample_grade_name">Project</string>
    <string name="sample_grade_percentage">30%</string>

    <string name="navigation_view_header">In Rainbows</string>

    <string name="home">Home</string>
    <string name="semesters">Semesters</string>
    <string name="add_semester">Add semester</string>
    <string name="add_subject">Add subject</string>
    <string name="add_grade">Add grade</string>

    <string name="grade">Grade</string>
    <string name="credits">Credits</string>
    <string name="sample_grade">5.0</string>
    <string name="sample_credits">20.5</string>

    <string name="dialog_h">h</string>
    <string name="dialog_m">m</string>
    <string name="add_time_dialog_title">Pick time amount to add</string>
    <string name="remove_time_dialog_title">Pick time amount to remove</string>
    <string name="add_time">Add time</string>
    <string name="remove_time">Remove time</string>
    <string name="tasks_list">Tasks</string>
    <string name="times_list">Time logs</string>

    <string name="err_no_semester">Error: No semesters were found</string>
    <string name="err_no_semester_msg">There is not any semester to add this subject to. Create a semester first.</string>
    <string name="err_no_selected_subject">Error: No grades were found</string>
    <string name="err_no_selected_subject_msg">There is not any subject to add this grade to. Create a subject first.</string>
</resources>
