<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_subject_rv_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sample_grade"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tv_subject_rv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_subject_rv_name" />

    <TextView
        android:id="@+id/tv_subject_rv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/sample_subject_name"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_subject_rv_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_subject_rv_week"
        app:layout_constraintEnd_toEndOf="@+id/tv_subject_rv_progress_today"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/tv_subject_rv_progress_today" />

    <TextView
        android:id="@+id/tv_subject_rv_progress_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sample_hours_day"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/pb_subject_rv_today"
        app:layout_constraintStart_toStartOf="@+id/pb_subject_rv_today"
        app:layout_constraintTop_toBottomOf="@+id/tv_subject_rv_today" />

    <ProgressBar
        android:id="@+id/pb_subject_rv_today"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:indeterminate="false"
        android:progressDrawable="@drawable/circle"
        app:layout_constraintEnd_toStartOf="@+id/pb_subject_rv_week"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subject_rv_progress_today" />

    <TextView
        android:id="@+id/tv_subject_rv_week"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginTop="16dp"
        android:text="@string/this_week"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_subject_rv_progress_week"
        app:layout_constraintStart_toStartOf="@+id/tv_subject_rv_progress_week"
        app:layout_constraintTop_toBottomOf="@+id/tv_subject_rv_grade" />

    <TextView
        android:id="@+id/tv_subject_rv_progress_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sample_hours_week"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/pb_subject_rv_week"
        app:layout_constraintStart_toStartOf="@+id/pb_subject_rv_week"
        app:layout_constraintTop_toBottomOf="@+id/tv_subject_rv_week" />

    <ProgressBar
        android:id="@+id/pb_subject_rv_week"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:indeterminate="false"
        android:progressDrawable="@drawable/circle"
        app:layout_constraintEnd_toStartOf="@+id/pb_subject_rv_semester"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pb_subject_rv_today"
        app:layout_constraintTop_toBottomOf="@+id/tv_subject_rv_progress_week" />

    <TextView
        android:id="@+id/tv_subject_rv_semester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_semester"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_subject_rv_week"
        app:layout_constraintEnd_toEndOf="@+id/tv_subject_rv_progress_semester"
        app:layout_constraintStart_toStartOf="@+id/tv_subject_rv_progress_semester" />

    <TextView
        android:id="@+id/tv_subject_rv_progress_semester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sample_hours_semester"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/pb_subject_rv_semester"
        app:layout_constraintStart_toStartOf="@+id/pb_subject_rv_semester"
        app:layout_constraintTop_toBottomOf="@+id/tv_subject_rv_semester" />

    <ProgressBar
        android:id="@+id/pb_subject_rv_semester"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:indeterminate="false"
        android:progress="25"
        android:progressDrawable="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pb_subject_rv_week"
        app:layout_constraintTop_toBottomOf="@+id/tv_subject_rv_progress_semester" />

</android.support.constraint.ConstraintLayout>