<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_add_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_timer_white_24dp"
            android:focusable="true" />

        <FrameLayout
            android:id="@+id/header_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="10dp"
                tools:layout_editor_absoluteY="10dp">

                <TextView
                    android:id="@+id/tv_subject_detail_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/sample_subject_grade"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_subject_detail_name"
                    app:layout_constraintStart_toStartOf="@+id/tv_subject_detail_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_subject_detail_name" />

                <TextView
                    android:id="@+id/tv_subject_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/sample_subject_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/tv_subject_detail_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today"
                    android:textSize="14sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_subject_detail_week"
                    app:layout_constraintEnd_toEndOf="@+id/tv_subject_detail_progress_today"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="@+id/tv_subject_detail_progress_today" />

                <TextView
                    android:id="@+id/tv_subject_detail_progress_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/sample_hours_day"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/pb_subject_detail_today"
                    app:layout_constraintStart_toStartOf="@+id/pb_subject_detail_today"
                    app:layout_constraintTop_toBottomOf="@+id/tv_subject_detail_today" />

                <ProgressBar
                    android:id="@+id/pb_subject_detail_today"
                    style="?android:progressBarStyleHorizontal"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:indeterminate="false"
                    android:progressDrawable="@drawable/circle"
                    app:layout_constraintEnd_toStartOf="@+id/pb_subject_detail_week"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_subject_detail_progress_today" />

                <TextView
                    android:id="@+id/tv_subject_detail_week"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/this_week"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_subject_detail_progress_week"
                    app:layout_constraintStart_toStartOf="@+id/tv_subject_detail_progress_week"
                    app:layout_constraintTop_toBottomOf="@+id/tv_subject_detail_grade" />

                <TextView
                    android:id="@+id/tv_subject_detail_progress_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/sample_hours_week"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/pb_subject_detail_week"
                    app:layout_constraintStart_toStartOf="@+id/pb_subject_detail_week"
                    app:layout_constraintTop_toBottomOf="@+id/tv_subject_detail_week" />

                <ProgressBar
                    android:id="@+id/pb_subject_detail_week"
                    style="?android:progressBarStyleHorizontal"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:indeterminate="false"
                    android:progressDrawable="@drawable/circle"
                    app:layout_constraintEnd_toStartOf="@+id/pb_subject_detail_semester"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/pb_subject_detail_today"
                    app:layout_constraintTop_toBottomOf="@+id/tv_subject_detail_progress_week" />

                <TextView
                    android:id="@+id/tv_subject_detail_semester"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_semester"
                    android:textSize="14sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_subject_detail_week"
                    app:layout_constraintEnd_toEndOf="@+id/tv_subject_detail_progress_semester"
                    app:layout_constraintStart_toStartOf="@+id/tv_subject_detail_progress_semester" />

                <TextView
                    android:id="@+id/tv_subject_detail_progress_semester"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/sample_hours_semester"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/pb_subject_detail_semester"
                    app:layout_constraintStart_toStartOf="@+id/pb_subject_detail_semester"
                    app:layout_constraintTop_toBottomOf="@+id/tv_subject_detail_semester" />

                <ProgressBar
                    android:id="@+id/pb_subject_detail_semester"
                    style="?android:progressBarStyleHorizontal"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:indeterminate="false"
                    android:progress="25"
                    android:progressDrawable="@drawable/circle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/pb_subject_detail_week"
                    app:layout_constraintTop_toBottomOf="@+id/tv_subject_detail_progress_semester" />
            </android.support.constraint.ConstraintLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/rv_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_grade_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />

        </FrameLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_frame" />


    </android.support.constraint.ConstraintLayout>
</LinearLayout>

