<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_check_semester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:srcCompat="@drawable/ic_check_white_24dp" />

    <TextView
        android:id="@+id/tvStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/start_date"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etStartDate"
        app:layout_constraintEnd_toStartOf="@+id/etStartDate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvEndDate"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/end_date"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etEndDate"
        app:layout_constraintEnd_toStartOf="@+id/etEndDate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSemesterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/semester_name"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etSemesterName"
        app:layout_constraintEnd_toStartOf="@+id/etSemesterName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etEndDate"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/etStartDate"
        app:layout_constraintTop_toBottomOf="@+id/etStartDate" />

    <EditText
        android:id="@+id/etStartDate"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/etSemesterName"
        app:layout_constraintTop_toBottomOf="@+id/etSemesterName" />

    <EditText
        android:id="@+id/etSemesterName"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tvBarrier"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Barrier
        android:id="@+id/tvBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="292dp"
        android:layout_marginStart="91dp"
        app:barrierDirection="end"
        app:constraint_referenced_ids="tvStartDate,tvName,tvEndDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>